--- a/src/Views/PerfilVendedorAdmin.fxml
+++ b/src/Views/PerfilVendedorAdmin.fxml
@@ -16,30 +16,23 @@
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <MenuBar layoutX="440.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
+            <MenuBar layoutX="423.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
                <menus>
-                  <Menu mnemonicParsing="false" style="-fx-color: rgba(11, 63, 194, 1);" text="Carrinho">
+                  <Menu fx:id="menuCarrinho" mnemonicParsing="false" onAction="#menu_carrinho_onAction" style="-fx-text-fill: rgba(11, 63, 194, 1); -fx-font-weight: bold;" text="Carrinho" />
+                  <Menu fx:id="menuUser" mnemonicParsing="false" onAction="#menu_user_onAction" style="-fx-text-fill: rgba(11, 63, 194, 1); -fx-font-weight: bold;" text="Usuario">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Delete" />
-                     </items>
-                  </Menu>
-                  <Menu mnemonicParsing="false" style="-fx-color: rgba(11, 63, 194, 1);" text="Usuario">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="About" />
+                        <MenuItem fx:id="menuUserPerfil" mnemonicParsing="false" onAction="#menu_user_perfil_onAction" text="Perfil" />
+                        <MenuItem mnemonicParsing="false" text="Sair" />
                      </items>
                   </Menu>
                </menus>
             </MenuBar>
             <MenuBar prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
                <menus>
-                  <Menu mnemonicParsing="false" style="-fx-color: rgba(11, 63, 194, 1);" text="Home">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Delete" />
-                     </items>
-                  </Menu>
+                  <Menu fx:id="menuHome" mnemonicParsing="false" onAction="#menu_home_onAction" style="-fx-text-fill: rgba(11, 63, 194, 1); -fx-font-weight: bold;" text="Home" />
                </menus>
             </MenuBar>
-            <Label contentDisplay="CENTER" layoutX="75.0" prefHeight="35.0" prefWidth="365.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-font-weight: bold;" text="PERFIL" textFill="#0b3fc2" AnchorPane.leftAnchor="75.0">
+            <Label contentDisplay="CENTER" layoutX="75.0" prefHeight="35.0" prefWidth="365.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-font-weight: bold;" text="PERFIL" AnchorPane.leftAnchor="75.0">
                <opaqueInsets>
                   <Insets bottom="10.0" />
                </opaqueInsets>
