--- a/src/Views/MenuAdministrador.fxml
+++ b/src/Views/MenuAdministrador.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -18,17 +19,6 @@
          <children>
             <AnchorPane prefHeight="400.0" prefWidth="600.0">
                <children>
-                  <MenuBar layoutX="439.0" prefHeight="35.0" prefWidth="161.0" style="-fx-background-color: rgba(173, 188, 242);">
-                     <menus>
-                        <Menu fx:id="menu_carrinho" mnemonicParsing="false" onAction="#ir_carrinho" style="-fx-color: rgba(11, 63, 194, 1);" text="Carrinho" />
-                        <Menu fx:id="menu_usuario" mnemonicParsing="false" onAction="#ir_usuario" style="-fx-color: rgba(11, 63, 194, 1);" text="Usuario" />
-                     </menus>
-                  </MenuBar>
-                  <MenuBar prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
-                     <menus>
-                        <Menu fx:id="botao_home" mnemonicParsing="false" style="-fx-color: rgba(11, 63, 194, 1);" text="Home" />
-                     </menus>
-                  </MenuBar>
                   <Label contentDisplay="CENTER" layoutX="75.0" prefHeight="35.0" prefWidth="365.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-font-weight: bold;" text="MENU ADMINISTRADOR" textFill="#1e54e1" AnchorPane.leftAnchor="75.0">
                      <opaqueInsets>
                         <Insets bottom="10.0" />
@@ -67,7 +57,7 @@
                               <Font size="11.0" />
                            </font>
                         </Button>
-                        <Button fx:id="pesquisar_admin" layoutX="490.0" layoutY="96.0" mnemonicParsing="false" onAction="#pesquisar" prefHeight="35.0" prefWidth="65.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Pesquisar" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
+                        <Button fx:id="pesquisar_admin" layoutX="490.0" layoutY="96.0" mnemonicParsing="false" onAction="#pesquisar" prefHeight="35.0" prefWidth="75.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Pesquisar" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -81,6 +71,22 @@
                         <Label fx:id="label_aviso" layoutX="195.0" layoutY="72.0" prefHeight="17.0" prefWidth="358.0" textFill="RED" />
                      </children>
                   </AnchorPane>
+                  <MenuBar layoutX="-4.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
+                     <menus>
+                        <Menu fx:id="menuHome" mnemonicParsing="false" onAction="#menu_home" style="-fx-text-fill: rgba(0, 0, 0, 1); -fx-font-weight: bold; -fx-font-size: 13;" text="Home" />
+                     </menus>
+                  </MenuBar>
+                  <MenuBar layoutX="423.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
+                     <menus>
+                        <Menu fx:id="menuCarrinho" mnemonicParsing="false" onAction="#menu_carrinho" style="-fx-text-fill: rgba(30, 84, 225, 1); -fx-font-weight: bold;" text="Carrinho" />
+                        <Menu fx:id="menuUser" mnemonicParsing="false" onAction="#menu_user" style="-fx-text-fill: rgba(30, 84, 225, 1); -fx-font-weight: bold;" text="Usuario">
+                           <items>
+                              <MenuItem fx:id="menuUserPerfil" mnemonicParsing="false" onAction="#menu_user_perfil" text="Perfil" />
+                              <MenuItem fx:id="menuUserSair" mnemonicParsing="false" onAction="#menu_user_sair" text="Sair" />
+                           </items>
+                        </Menu>
+                     </menus>
+                  </MenuBar>
                </children>
             </AnchorPane>
          </children>
