--- a/src/Views/Perfil.fxml
+++ b/src/Views/Perfil.fxml
@@ -16,29 +16,6 @@
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <MenuBar layoutX="440.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
-               <menus>
-                  <Menu mnemonicParsing="false" style="-fx-color: rgba(11, 63, 194, 1);" text="Carrinho">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Delete" />
-                     </items>
-                  </Menu>
-                  <Menu mnemonicParsing="false" style="-fx-color: rgba(11, 63, 194, 1);" text="Usuario">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="About" />
-                     </items>
-                  </Menu>
-               </menus>
-            </MenuBar>
-            <MenuBar prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
-               <menus>
-                  <Menu mnemonicParsing="false" style="-fx-color: rgba(11, 63, 194, 1);" text="Home">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Delete" />
-                     </items>
-                  </Menu>
-               </menus>
-            </MenuBar>
             <Label contentDisplay="CENTER" layoutX="75.0" prefHeight="35.0" prefWidth="365.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-font-weight: bold;" text="PERFIL" textFill="#0b3fc2" AnchorPane.leftAnchor="75.0">
                <opaqueInsets>
                   <Insets bottom="10.0" />
@@ -78,6 +55,22 @@
                   </AnchorPane>
                </children>
             </AnchorPane>
+            <MenuBar layoutX="423.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
+               <menus>
+                  <Menu fx:id="menuCarrinho" mnemonicParsing="false" onAction="#menu_carrinho" style="-fx-text-fill: rgba(30, 84, 225, 1); -fx-font-weight: bold;" text="Carrinho" />
+                  <Menu fx:id="menuUser" mnemonicParsing="false" onAction="#menu_user" style="-fx-text-fill: rgba(30, 84, 225, 1); -fx-font-weight: bold;" text="Usuario">
+                     <items>
+                        <MenuItem fx:id="menuUserPerfil" mnemonicParsing="false" onAction="#menu_user_perfil" text="Perfil" />
+                        <MenuItem fx:id="menuUserSair" mnemonicParsing="false" onAction="#menu_user_sair" text="Sair" />
+                     </items>
+                  </Menu>
+               </menus>
+            </MenuBar>
+            <MenuBar layoutX="-4.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
+               <menus>
+                  <Menu fx:id="menuHome" mnemonicParsing="false" onAction="#menu_home" style="-fx-text-fill: rgba(0, 0, 0, 1); -fx-font-weight: bold; -fx-font-size: 13;" text="Home" />
+               </menus>
+            </MenuBar>
          </children>
       </AnchorPane>
    </children>
